🐛 Remove wrapping classes to fix Safari

--- a/public/static/css/acf-wp-menu.css
+++ b/public/static/css/acf-wp-menu.css
@@ -1,11 +1,10 @@
+@charset "UTF-8";
+
 /*
 This is a modified version of the mega menu CSS file from the website. I wrapped
 the styles in .ft_banner to make sure they only target our banner code.
 */
 
-@charset "UTF-8";
-
-.ft_banner {
 /** THIS FILE IS AUTOMATICALLY GENERATED - DO NOT MAKE MANUAL EDITS! **/
 /** Custom CSS should be added to Mega Menu > Menu Themes > Custom Styling **/
 .mega-menu-last-modified-1727888988 {
@@ -2046,7 +2045,6 @@ the styles in .ft_banner to make sure they only target our banner code.
 #mega-menu-wrap-primary {
   clear: both;
 }
-@charset "UTF-8";
 /** THIS FILE IS AUTOMATICALLY GENERATED - DO NOT MAKE MANUAL EDITS! **/
 /** Custom CSS should be added to Mega Menu > Menu Themes > Custom Styling **/
 .mega-menu-last-modified-1727888989 {
@@ -4060,7 +4058,6 @@ the styles in .ft_banner to make sure they only target our banner code.
 #mega-menu-wrap-affiliate-social {
   clear: both;
 }
-@charset "UTF-8";
 /** THIS FILE IS AUTOMATICALLY GENERATED - DO NOT MAKE MANUAL EDITS! **/
 /** Custom CSS should be added to Mega Menu > Menu Themes > Custom Styling **/
 .mega-menu-last-modified-1727888989 {
@@ -6075,4 +6072,3 @@ the styles in .ft_banner to make sure they only target our banner code.
   clear: both;
 }
 .wp-block {}
-}
